--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -521,14 +521,16 @@
 
 </div>
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
+<div class="row">
+  <div class="col-md-4">
+    col-1
+  </div>
+  <div class="col-md-4">
+    col-2
+  </div>
+  <div class="col-md-4">
+    col-3
+  </div>
+</div>
 
 <router-outlet></router-outlet>
