--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -522,16 +522,23 @@
 </div>
 
 <div class="row">
-  <div class="col-md-4">
-    col-1
+  <div class="col-md-3">
+    <h2 routerLink="home">go to home</h2>
   </div>
-  <div class="col-md-4">
-    <button igxButton="flat">Flat</button>
+  <div class="col-md-3">
+    <h2 routerLink="role">go to role</h2>
   </div>
-  <div class="col-md-4">
-    col-3
+  <div class="col-md-3">
+    <h2 routerLink="user">go to user</h2>
+  </div>
+  <div class="col-md-3">
+    <h2 [routerLink]="['user',7]">go to user detail 7</h2>
   </div>
 </div>
+
+
+
+<router-outlet></router-outlet>
 
 <ngx-spinner
   bdColor="rgba(51,51,51,0.8)"
@@ -541,5 +548,3 @@
 >
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
-
-<router-outlet></router-outlet>
