--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,25 @@
-
-
 <div class="row">
   <div class="col-md-3">
-    <h2 routerLink="home">go to home</h2>
+    <ul>
+      <li routerLink="home">Home</li>
+      <li routerLink="role">Role</li>
+      <li routerLink="user">User</li>
+        <ul>
+          <li [routerLink]="['user',5]">
+            User 5 Detail
+          </li>
+          <li [routerLink]="['user',5, 'role']">
+            User 5 Role
+          </li>
+        </ul>
+    </ul>
   </div>
-  <div class="col-md-3">
-    <h2 routerLink="role">go to role</h2>
-  </div>
-  <div class="col-md-3">
-    <h2 routerLink="user">go to user</h2>
-  </div>
-  <div class="col-md-3">
-    <h2 [routerLink]="['user',7]">go to user detail 7</h2>
+  <div class="col-md-9">
+    <router-outlet></router-outlet>
   </div>
 </div>
 
 
-<button igxButton="flat">Wellcome to App Component</button>
-<router-outlet></router-outlet>
-
-<ngx-spinner
-  bdColor="rgba(51,51,51,0.8)"
-  size="medium"
-  color="#fff"
-  type="ball-scale-multiple"
->
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
   <p style="font-size: 20px; color: white">Loading...</p>
 </ngx-spinner>
