--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,1 +1,32 @@
-<p>sidebar works!</p>
+<!--
+<div class="content-wrap">
+    <igx-nav-drawer id="navigation" #drawer [isOpen]="true">
+      <ng-template igxDrawer>
+        <nav>
+          <span igxDrawerItem>Sidebar Listesi</span>
+          <span igxDraweItem igxRipple routerLink="home">Home</span>
+          <span igxDraweItem igxRipple routerLink="role">Role</span>
+          <span igxDraweItem igxRipple routerLink="user">User</span>
+        </nav>
+      </ng-template>
+    </igx-nav-drawer>
+    <main>
+    </main>
+  </div> -->
+
+  <!-- app.component.html -->
+<div class="content-wrap">
+    <igx-nav-drawer id="navigation" #drawer [isOpen]="true">
+      <ng-template igxDrawer>
+        <nav>
+          <span igxDrawerItem [isHeader]="true">Slider Listesi</span>
+          <span igxDrawerItem igxRipple routerLink="home">Home</span>
+          <span igxDrawerItem igxRipple routerLink="role">Role</span>
+          <span igxDrawerItem igxRipple routerLink="user">User</span>
+        </nav>
+      </ng-template>
+    </igx-nav-drawer>
+    <main>
+      <!-- app content -->
+    </main>
+  </div>
