--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
 <div class="row">
   <div class="col-md-3">
+    <app-sidebar></app-sidebar>
+    <!--
     <ul>
       <li routerLink="home">Home</li>
       <li routerLink="role">Role</li>
@@ -15,6 +17,7 @@
           </li>
         </ul>
     </ul>
+     -->
   </div>
   <div class="col-md-9">
     <router-outlet></router-outlet>
