--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <h2>One Way Binding</h2>
+        <h2>One Way Binding <span style="font-size: 0.7rem;">from Component to DOM</span></h2>
         <hr>
         <div class="row">
             <div class="col-md-4">
@@ -14,6 +14,10 @@
                 <div>
                     <img height="120px" src="{{user.faworite_place_image}}" alt="favorite place img">
                 </div>
+            </div>
+            <div class="col-md-3">
+                <h3>Property Binding</h3>
+                <input type="text" [value]="user.name">
             </div>
         </div>
     </div>
