--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -3,7 +3,7 @@
         <h2>One Way Binding <span style="font-size: 0.7rem;">from Component to DOM</span></h2>
         <hr>
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h3>Interpolation</h3>
                 <p>
                     Name: {{user.name}}, Surname: {{user.surname}}
@@ -18,6 +18,14 @@
             <div class="col-md-3">
                 <h3>Property Binding</h3>
                 <input type="text" [value]="user.name">
+            </div>
+            <div class="col-md-3">
+                <h3>Attribute Binding</h3>
+                <input type="text" [value]="user.name" [attr.disabled]="!user.isEditable ? 'disabled' : null ">
+            </div>
+            <div class="col-md-3">
+                <h3>Class Binding</h3>
+                <p [class.red]="user.name==='Sadettin' ? true : false ">Renk değeri!!!</p>
             </div>
         </div>
     </div>
