--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 mt-2">
         <h2>One Way Binding <span style="font-size: 0.7rem;">from Component to DOM</span></h2>
         <hr>
         <div class="row">
@@ -19,13 +19,32 @@
                 <h3>Property Binding</h3>
                 <input type="text" [value]="user.name">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <h3>Attribute Binding</h3>
                 <input type="text" [value]="user.name" [attr.disabled]="!user.isEditable ? 'disabled' : null ">
             </div>
-            <div class="col-md-3">
+            <div class="col-md-2">
                 <h3>Class Binding</h3>
                 <p [class.red]="user.name==='Sadettin' ? true : false ">Renk değeri!!!</p>
+            </div>
+            <div class="col-md-2">
+                <h3>Style Binding</h3>
+                <p [style.color]="user.name==='Sadettin' ? 'green' : 'blue' ">Style Color!</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-12 mt-4">
+        <h2>One Way Binding <span style="font-size: 0.7rem;">from DOM to Component</span></h2>
+        <hr>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Event Binding</h3>
+                <input 
+                type="text" 
+                [value]="user.name"
+                (keyup.enter)="inputSubmit($event);"
+                />
+                <button (click)="buttonClicked();">OK!!!</button>
             </div>
         </div>
     </div>
