--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -48,4 +48,15 @@
             </div>
         </div>
     </div>
+    <div class="col-md-12 mt-4">
+        <h2>Two Way Binding</h2>
+        <hr>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>ngModel</h3>
+                <input type="text" [(ngModel)]="user.name">
+                <p>{{user.name}}</p>
+            </div>
+        </div>
+    </div>
 </div>
